# diff-fox

./: .gitignore  Dockerfile  README.md  action.yml  pyproject.toml
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  diff-fox.yml  docker-build.yml  release.yml  security.yml
action/: entrypoint.py  requirements.txt
examples/: user_service.py
plugin/: plugin.json
plugin/.claude-plugin/: plugin.json
plugin/agents/: reviewer.md
plugin/commands/: diff-fox-pr.md  diff-fox.md
plugin/skills/: diff-fox-pr.md  diff-fox.md  review-pr.md  review.md
src/diff_fox/: __init__.py  constants.py  llm.py  models.py  run_review.py
src/diff_fox/config/: loader.py  models.py
src/diff_fox/context/: call_graph.py  enricher.py  impact.py  symbols.py
src/diff_fox/integrations/: jira.py
src/diff_fox/output/: github_poster.py  text_formatter.py
src/diff_fox/review/: dedup.py  jira_alignment.py  pipeline.py  processor.py  resolver.py  security_filter.py  validator.py  verification.py
src/diff_fox/review/prompts/: architecture.py  base.py  cogs.py  logic.py  performance.py  risk.py  security.py
src/diff_fox/scm/: base.py  diff_parser.py  github.py  models.py
tests/: conftest.py  test_config.py  test_diff_parser.py  test_models.py
